Basicic vizualization framework created but glfw needs to be updated and code neeeds to be changed over from glew to glad.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ cmake-build*/
 # planing docs
 planning_docs/
 
+# external libraries (glad,glfw, and glm)
+external/
+
 # Visual Studio / MSVC
 .vscode/
 .vs/
