updated the libs, now to update the code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ find_package(OpenGL REQUIRED)
 add_executable(snow_sim_app
   src/main.cpp
   viz/renderer.cpp
+  viz/gl.c
 )
 
 target_include_directories(snow_sim_app PRIVATE
@@ -41,7 +42,6 @@ target_link_libraries(snow_sim_app PRIVATE
   snow_sim
   OpenGL::GL
   ${CMAKE_SOURCE_DIR}/external/lib/glfw3.lib
-  ${CMAKE_SOURCE_DIR}/external/lib/glew32.lib
   gdi32.lib
   shell32.lib
   user32.lib
@@ -54,7 +54,6 @@ target_link_libraries(snow_sim_app PRIVATE
 
 add_custom_command(TARGET snow_sim_app POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
-          ${CMAKE_SOURCE_DIR}/external/glew32.dll
           $<TARGET_FILE_DIR:snow_sim_app>)
 
 set_property(TARGET snow_sim_app PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
