horozontal density propigation is moving against net flux direction when snow_transport_speed_y is unifromly negitive and snow_transport_speed_x is positive. this effect diapears when snow_transport_speed_y is zero. checkpointing before diagnosing problums.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ cmake-build*/
 
 # planing docs
 planning_docs/
+STYLE_GUIDE.md
 
 # external libraries (glad,glfw, and glm)
 external/
@@ -38,4 +39,3 @@ external/
 Thumbs.db
 *.swp
 *.tmp
-
